chore: placeholder app secret

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ DISCORD_SIGNUPS_CHANNEL=''
 DISCORD_DEPLOYMENTS_SUCCESS_CHANNEL=''
 DISCORD_DEPLOYMENTS_FAILED_CHANNEL=''
 
-STORMKIT_APP_SECRET=""
+STORMKIT_APP_SECRET="xxxx-xxxx-xxxx-xxxx-xxxx-xxxx-xx"
 STORMKIT_URL=''
 STORMKIT_API_URL='http://api.localhost:8888'
 STORMKIT_APP_URL='https://localhost:5400'
